# axymail-gateway

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/axymail_gateway/: config.py  database.py  deps.py  main.py  models.py  telemetry.py
src/axymail_gateway/router/: accounts.py  admin.py  health.py  mailboxes.py  messages.py  oauth.py  send.py
src/axymail_gateway/services/: guard_client.py  imap_service.py  oauth_service.py  sanitizer.py  smtp_service.py  token_service.py
src/axymail_gateway/templates/admin/: base.html  dashboard.html  delete_confirm.html  login.html  providers.html
src/examples/: basic_usage.py  docker-compose.yml
src/tests/: conftest.py  test_accounts.py  test_guard_client.py  test_health.py  test_messages.py  test_sanitizer.py
