[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axymail-gateway"
version = "0.1.0"
description = "Self-hosted IMAP/SMTP REST API gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]",
    "aioimaplib>=1.1",
    "aiosmtplib>=3.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings",
    "cryptography",
    "python-dotenv",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
    # Observability
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "prometheus-fastapi-instrumentator>=6.1",
    # Content sanitization
    "nh3>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "mailpit",
]

[project.scripts]
axymail-gateway = "axymail_gateway.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/axymail_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
